--- a/core/templates/core/hostdiscovery.html
+++ b/core/templates/core/hostdiscovery.html
@@ -20,7 +20,7 @@
                       </div>
                       <div class="col" id="ipInput">
                         <label class="my-1 mr-2" for="scan_name">Network subnet</label>
-                        <input type="text" name="subnet" id="subnet" class="form-control" placeholder="EX: 192.168.1.0/24" pattern="\b(?:\d{1,3}\.){3}\d{1,3}/\d{1,2}\b" title="Please enter a valid IPv4 network in CIDR notation" required>
+                        <input type="text" name="subnet" id="subnet" class="form-control" placeholder="EX: 192.168.1.0/24" title="Please enter a valid IPv4 network in CIDR notation" required>
                       </div>
                     </div>
                     <div class="row m-3">
