--- a/core/templates/core/report.html
+++ b/core/templates/core/report.html
@@ -135,5 +135,7 @@
     <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
     <script src="{%static 'datatables-simple-demo.js' %}"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    {%block scripts%}
+    {%endblock%}
 </body>
 </html>
