organizing scan report pages

--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -160,7 +160,19 @@
                                         <a href="{%url 'network_forensics'%}" class="btn btn-primary">New scan</a>
                                     </div>
                                 </div>
-                            </div>  
+                            </div>
+                            
+                            <div class="col-xl-3 col-md-6">
+                                <div class="card text-center text-grey mb-4"  style="width: 16rem; height: 20rem;">
+                                    {% comment %} <img class="card-img-top mx-auto " style="width: 9rem; height: 12rem;" src="{%static "malware.png"%}" alt="Card image cap"> {% endcomment %}
+                                    <div class="card-body" >
+                                        <i class="fa-solid fa-virus" style="font-size: 180px; margin:10px;"></i>
+                                        <p class="card-text">Wanacry (MS17-010)</p>
+                                        <a href="{%url 'network_forensics'%}" class="btn btn-primary">New scan</a>
+                                    </div>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </main>
