--- a/core/templates/core/chat.html
+++ b/core/templates/core/chat.html
@@ -8,266 +8,8 @@
         <title>Netpackt | Dashboard</title>
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
         <link href="{%static 'styles.css'%}" rel="stylesheet"/>
+        <link href="{%static 'style_chat.css'%}" rel="stylesheet"/>
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" rel="stylesheet">
-        <style type="text/css">
-            body{
-        background-color: #f4f7f6;
-        margin-top:20px;
-    }
-    .card {
-        background: #fff;
-        transition: .5s;
-        border: 0;
-        margin-bottom: 30px;
-        border-radius: .55rem;
-        position: relative;
-        width: 100%;
-        box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
-    }
-    .chat-app .people-list {
-        width: 280px;
-        position: absolute;
-        left: 0;
-        top: 0;
-        padding: 20px;
-        z-index: 7
-    }
-    
-    .chat-app .chat {
-        margin-left: 280px;
-        border-left: 1px solid #eaeaea
-    }
-    
-    .people-list {
-        -moz-transition: .5s;
-        -o-transition: .5s;
-        -webkit-transition: .5s;
-        transition: .5s
-    }
-    
-    .people-list .chat-list li {
-        padding: 10px 15px;
-        list-style: none;
-        border-radius: 3px
-    }
-    
-    .people-list .chat-list li:hover {
-        background: #efefef;
-        cursor: pointer
-    }
-    
-    .people-list .chat-list li.active {
-        background: #efefef
-    }
-    
-    .people-list .chat-list li .name {
-        font-size: 15px
-    }
-    
-    .people-list .chat-list img {
-        width: 45px;
-        border-radius: 50%
-    }
-    
-    .people-list img {
-        float: left;
-        border-radius: 50%
-    }
-    
-    .people-list .about {
-        float: left;
-        padding-left: 8px
-    }
-    
-    .people-list .status {
-        color: #999;
-        font-size: 13px
-    }
-    
-    .chat .chat-header {
-        padding: 15px 20px;
-        border-bottom: 2px solid #f4f7f6
-    }
-    
-    .chat .chat-header img {
-        float: left;
-        border-radius: 40px;
-        width: 40px
-    }
-    
-    .chat .chat-header .chat-about {
-        float: left;
-        padding-left: 10px
-    }
-    
-    .chat .chat-history {
-        padding: 20px;
-        border-bottom: 2px solid #fff
-    }
-    
-    .chat .chat-history ul {
-        padding: 0
-    }
-    
-    .chat .chat-history ul li {
-        list-style: none;
-        margin-bottom: 30px
-    }
-    
-    .chat .chat-history ul li:last-child {
-        margin-bottom: 0px
-    }
-    
-    .chat .chat-history .message-data {
-        margin-bottom: 15px
-    }
-    
-    .chat .chat-history .message-data img {
-        border-radius: 40px;
-        width: 40px
-    }
-    
-    .chat .chat-history .message-data-time {
-        color: #434651;
-        padding-left: 6px
-    }
-    
-    .chat .chat-history .message {
-        color: #444;
-        padding: 18px 20px;
-        line-height: 26px;
-        font-size: 16px;
-        border-radius: 7px;
-        display: inline-block;
-        position: relative
-    }
-    
-    .chat .chat-history .message:after {
-        bottom: 100%;
-        left: 7%;
-        border: solid transparent;
-        content: " ";
-        height: 0;
-        width: 0;
-        position: absolute;
-        pointer-events: none;
-        border-bottom-color: #fff;
-        border-width: 10px;
-        margin-left: -10px
-    }
-    
-    .chat .chat-history .my-message {
-        background: #efefef
-    }
-    
-    .chat .chat-history .my-message:after {
-        bottom: 100%;
-        left: 30px;
-        border: solid transparent;
-        content: " ";
-        height: 0;
-        width: 0;
-        position: absolute;
-        pointer-events: none;
-        border-bottom-color: #efefef;
-        border-width: 10px;
-        margin-left: -10px
-    }
-    
-    .chat .chat-history .other-message {
-        background: #e8f1f3;
-        text-align: right
-    }
-    
-    .chat .chat-history .other-message:after {
-        border-bottom-color: #e8f1f3;
-        left: 93%
-    }
-    
-    .chat .chat-message {
-        padding: 20px
-    }
-    
-    .online,
-    .offline,
-    .me {
-        margin-right: 2px;
-        font-size: 8px;
-        vertical-align: middle
-    }
-    
-    .online {
-        color: #86c541
-    }
-    
-    .offline {
-        color: #e47297
-    }
-    
-    .me {
-        color: #1d8ecd
-    }
-    
-    .float-right {
-        float: right
-    }
-    
-    .clearfix:after {
-        visibility: hidden;
-        display: block;
-        font-size: 0;
-        content: " ";
-        clear: both;
-        height: 0
-    }
-    
-    @media only screen and (max-width: 767px) {
-        .chat-app .people-list {
-            height: 465px;
-            width: 100%;
-            overflow-x: auto;
-            background: #fff;
-            left: -400px;
-            display: none
-        }
-        .chat-app .people-list.open {
-            left: 0
-        }
-        .chat-app .chat {
-            margin: 0
-        }
-        .chat-app .chat .chat-header {
-            border-radius: 0.55rem 0.55rem 0 0
-        }
-        .chat-app .chat-history {
-            height: 300px;
-            overflow-x: auto
-        }
-    }
-    
-    @media only screen and (min-width: 768px) and (max-width: 992px) {
-        .chat-app .chat-list {
-            height: 650px;
-            overflow-x: auto
-        }
-        .chat-app .chat-history {
-            height: 600px;
-            overflow-x: auto
-        }
-    }
-    
-    @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1) {
-        .chat-app .chat-list {
-            height: 480px;
-            overflow-x: auto
-        }
-        .chat-app .chat-history {
-            height: calc(100vh - 350px);
-            overflow-x: auto
-        }
-    }
-        </style>
     </head>
     <body class="sb-nav-fixed">
         <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
@@ -338,7 +80,7 @@
                             </a>
                             <div class="collapse" id="collapseLayouts3" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="{%url 'my_workspaces'%}">My messages</a>
+                                    <a class="nav-link" href="{%url 'chat' 'khaled'%}">My messages</a>
                                     <a class="nav-link" href="{%url 'sharedscans'%}">Messages request</a>
                                 </nav>
                             </div>
@@ -350,8 +92,8 @@
                             </a>
                             <div class="collapse" id="collapseLayouts4" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="{%url 'my_workspaces'%}">My messages</a>
-                                    <a class="nav-link" href="{%url 'sharedscans'%}">Messages request</a>
+                                    <a class="nav-link" href="{%url 'chat' 'khaled'%}">My friends</a>
+                                    <a class="nav-link" href="{%url 'sharedscans'%}">Add friends</a>
                                 </nav>
                             </div>
 
@@ -367,130 +109,78 @@
             <div id="layoutSidenav_content">
                 <main>
                     <div class="container-fluid px-4">
-                        <h1 class="mt-4">Chat board</h1>
+                        <h1 class="mt-4">Messages</h1>
                         <ol class="breadcrumb mb-4">
                             <li class="breadcrumb-item active">My messages</li>
                         </ol>
-                        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-<div class="container">
-<div class="row clearfix">
-<div class="col-lg-12">
-<div class="card chat-app">
-<div id="plist" class="people-list">
-<div class="input-group">
-<div class="input-group-prepend">
-<span class="input-group-text"><i class="fa fa-search"></i></span>
-</div>
-<input type="text" class="form-control" placeholder="Search...">
-</div>
-<ul class="list-unstyled chat-list mt-2 mb-0">
-<li class="clearfix">
-<img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="avatar">
-<div class="about">
-<div class="name">Vincent Porter</div>
-<div class="status"> <i class="fa fa-circle offline"></i> left 7 mins ago </div>
-</div>
-</li>
-<li class="clearfix active">
-<img src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="avatar">
-<div class="about">
-<div class="name">Aiden Chavez</div>
-<div class="status"> <i class="fa fa-circle online"></i> online </div>
-</div>
-</li>
-<li class="clearfix">
-<img src="https://bootdey.com/img/Content/avatar/avatar3.png" alt="avatar">
-<div class="about">
-<div class="name">Mike Thomas</div>
-<div class="status"> <i class="fa fa-circle online"></i> online </div>
-</div>
-</li>
-<li class="clearfix">
-<img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="avatar">
-<div class="about">
-<div class="name">Christian Kelly</div>
-<div class="status"> <i class="fa fa-circle offline"></i> left 10 hours ago </div>
-</div>
-</li>
-<li class="clearfix">
-<img src="https://bootdey.com/img/Content/avatar/avatar8.png" alt="avatar">
-<div class="about">
-<div class="name">Monica Ward</div>
-<div class="status"> <i class="fa fa-circle online"></i> online </div>
-</div>
-</li>
-<li class="clearfix">
-<img src="https://bootdey.com/img/Content/avatar/avatar3.png" alt="avatar">
-<div class="about">
-<div class="name">Dean Henry</div>
-<div class="status"> <i class="fa fa-circle offline"></i> offline since Oct 28 </div>
-</div>
-</li>
-</ul>
-</div>
-<div class="chat">
-<div class="chat-header clearfix">
-<div class="row">
-<div class="col-lg-6">
-<a href="javascript:void(0);" data-toggle="modal" data-target="#view_info">
-<img src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="avatar">
-</a>
-<div class="chat-about">
-<h6 class="m-b-0">Aiden Chavez</h6>
-<small>Last seen: 2 hours ago</small>
-</div>
-</div>
-<div class="col-lg-6 hidden-sm text-right">
-<a href="javascript:void(0);" class="btn btn-outline-secondary"><i class="fa fa-camera"></i></a>
-<a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-image"></i></a>
-<a href="javascript:void(0);" class="btn btn-outline-info"><i class="fa fa-cogs"></i></a>
-<a href="javascript:void(0);" class="btn btn-outline-warning"><i class="fa fa-question"></i></a>
-</div>
-</div>
-</div>
-<div class="chat-history">
-<ul class="m-b-0">
-<li class="clearfix">
-<div class="message-data text-right">
-<span class="message-data-time">10:10 AM, Today</span>
-<img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="avatar">
-</div>
-<div class="message other-message float-right"> Hi Aiden, how are you? How is the project coming along? </div>
-</li>
-<li class="clearfix">
-<div class="message-data">
-<span class="message-data-time">10:12 AM, Today</span>
-</div>
-<div class="message my-message">Are we meeting today?</div>
-</li>
-<li class="clearfix">
-<div class="message-data">
-<span class="message-data-time">10:15 AM, Today</span>
-</div>
-<div class="message my-message">Project has been already finished and I have results to show you.</div>
-</li>
-</ul>
-</div>
-<div class="chat-message clearfix">
-<div class="input-group mb-0">
-<div class="input-group-prepend">
-<span class="input-group-text"><i class="fa fa-send"></i></span>
-</div>
-<input type="text" class="form-control" placeholder="Enter text here...">
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
-<script type="text/javascript">
-	
-</script>
+                        {% comment %} content {% endcomment %}
+                       
+                            <div class="container">
+                                <div class="left">
+                                    <div class="top">
+                                        <input type="text" placeholder="Search" />
+                                        
+                                    </div>
+                                    <ul class="people" style="list-style-type: none;">
+                                        {%for user in users%} 
+                                            <li class="person" data-chat="person1">
+                                                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/382994/thomas.jpg" alt="" />
+                                                <a style="text-decoration: none;" href="{%url 'chat' user.1 %}">
+                                                <span class="name">{{user.1}}</span>
+                                                </a>
+                                                {%if user.2 == 0%}
+                                                    <span class="time"> <i class="fa fa-circle offline"></i> Offline</span>
+                                                {%else%}
+                                                    <span class="time"><i class="fa fa-circle online"></i> Online</span>
+                                                {%endif%}
+                                                <span class="preview"></span>
+                                            </li>
+                                        
+                                        {%endfor%}
+
+                                    </ul>
+                                </div>
+                                <div class="right">
+                                    <div class="top"><span>To: <span class="name">{{selected_username}} <span class="time"> Last seen : {{selected_lastlogin}} </span></span></span></div>
+
+                                    <div class="chat" data-chat="person2" id="chat_div">
+                                        
+                                        <div class="conversation-start">
+                                            <span>Today, 5:38 PM</span>
+                                        </div>
+                                        {%for message in messagess%}
+                                            {%if message.1 == request.user.username%}
+                                                <div class="bubble you">
+                                                    {{message.3}}
+                                                </div>
+                                            {%else%}
+                                            <div class="bubble me">
+                                                {{message.3}}
+                                            </div>
+                                            {%endif%}
+                                        {%endfor%}
+                                    </div>
+
+                                    <div class="write">
+                                        <form method="post" action=".">
+                                            {%csrf_token%}
+                                            <a href="javascript:;" class="write-link attach"></a>
+                                            <input type="text" name="message" placeholder="type your message here"/>
+                                            
+                                            <a href="" class="write-link smiley"></a>
+                                                <button type="submit" name="send_message" style="all: unset;">
+                                                    <a class="write-link send"></a>
+                                            </button>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        
+                        <!-- partial -->
+                        {% comment %} end content {% endcomment %}
                     </div>
                 </main>
+                <div><br></div>
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid px-4">
                         <div class="d-flex align-items-center justify-content-between small">
@@ -509,5 +199,35 @@
         <script src="{%static "scripts.js"%}"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+        <script  src="{%static "scripts_chat.js"%}"></script>
+        <script>
+            function emptyDiv() {
+                document.getElementById("chat_div").innerHTML = "";
+            }
+            
+            $(document).ready(function() {
+                setInterval(function() {
+                    $.ajax({
+                        type: 'GET',
+                        url: "{% url 'ajax_data_chats' selected_username=selected_username %}",  // Correctly render the template variable
+                        success: function(response) {
+                            emptyDiv();
+                            
+                            
+                            for (var key in response.chat){
+                                var sender = response.chat[key][1];
+                                var recevier = response.chat[key][2];
+                                var message = response.chat[key][3];
+                                
+                            }
+                        },
+                        error: function(xhr, errmsg, err) {
+                            console.log('Error:', xhr.status, errmsg);
+                        }
+                    });
+                }, 1000);
+            });
+        </script>
     </body>
 </html>
