--- a/core/templates/core/chat.html
+++ b/core/templates/core/chat.html
@@ -7,8 +7,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <title>Netpackt | Dashboard</title>
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
+        <link href="{%static 'chat.css'%}" rel="stylesheet"/>
         <link href="{%static 'styles.css'%}" rel="stylesheet"/>
-        <link href="{%static 'style_chat.css'%}" rel="stylesheet"/>
+        <link rel="stylesheet" href="{%static 'bootstrap.min.css'%}" />
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     </head>
     <body class="sb-nav-fixed">
@@ -115,66 +116,109 @@
                         </ol>
                         {% comment %} content {% endcomment %}
                        
-                            <div class="container">
-                                <div class="left">
-                                    <div class="top">
-                                        <input type="text" placeholder="Search" />
-                                        
-                                    </div>
-                                    <ul class="people" style="list-style-type: none;">
-                                        {%for user in users%} 
-                                            <li class="person" data-chat="person1">
-                                                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/382994/thomas.jpg" alt="" />
-                                                <a style="text-decoration: none;" href="{%url 'chat' user.1 %}">
-                                                <span class="name">{{user.1}}</span>
-                                                </a>
-                                                {%if user.2 == 0%}
-                                                    <span class="time"> <i class="fa fa-circle offline"></i> Offline</span>
-                                                {%else%}
-                                                    <span class="time"><i class="fa fa-circle online"></i> Online</span>
-                                                {%endif%}
-                                                <span class="preview"></span>
-                                            </li>
-                                        
-                                        {%endfor%}
+                        <div id="app" class="app">
 
-                                    </ul>
+                            <!-- LEFT SECTION -->
+                        
+                            <section id="main-left" class="main-left">
+                              <!-- header -->
+                              <div id="header-left" class="header-left">
+                                <span class="glyphicon glyphicon-menu-hamburger hamburger-btn"></span>
+                                <span class="glyphicon glyphicon-search search-btn"></span>
+                                <span class="glyphicon glyphicon-option-vertical option-btn"></span>
+                              </div>
+                        
+                              <!-- chat list -->
+                              <div id="chat-list" class="chat-list">
+                                <!-- user lists -->
+                                
+                                {%for user in users%}
+                                  <div id="friends" class="friends">
+                                    <!-- photo -->
+                                    <div class="profile friends-photo">
+                                      <img src="{%static 'user.png'%}" alt="">
+                                    </div>
+                                    
+                                    <div class="friends-credent">
+                                      <!-- name -->
+                                      <span class="friends-name">
+                                        <a href="{%url 'chat' user.1 %}" style="text-decoration: none; color: white;">{{user.1}}</a>
+                                      </span>
+                                      <!-- last message -->
+                                      <span class="friends-message">Crap! I forgot my shoes. Can you bring extra pair for me?</span>
+                                    </div>
+                                    <!-- notification badge -->
+                                    <span class="badge notif-badge">7</span>
+                                  </div>
+                                {%endfor%}
+
+
+                              </div>
+                        
+                              <!-- self-profile -->
+                              <div id="self-info" class="self-info">
+                                <!-- photo -->
+                                <div class="profile your-photo">
+                                  <img src="images/ava4.jpg" alt="">
                                 </div>
-                                <div class="right">
-                                    <div class="top"><span>To: <span class="name">{{selected_username}} <span class="time"> Last seen : {{selected_lastlogin}} </span></span></span></div>
-
-                                    <div class="chat" data-chat="person2" id="chat_div">
-                                        
-                                        <div class="conversation-start">
-                                            <span>Today, 5:38 PM</span>
-                                        </div>
-                                        {%for message in messagess%}
-                                            {%if message.1 == request.user.username%}
-                                                <div class="bubble you">
-                                                    {{message.3}}
-                                                </div>
-                                            {%else%}
-                                            <div class="bubble me">
-                                                {{message.3}}
-                                            </div>
-                                            {%endif%}
-                                        {%endfor%}
-                                    </div>
-
-                                    <div class="write">
-                                        <form method="post" action=".">
-                                            {%csrf_token%}
-                                            <a href="javascript:;" class="write-link attach"></a>
-                                            <input type="text" name="message" placeholder="type your message here"/>
-                                            
-                                            <a href="" class="write-link smiley"></a>
-                                                <button type="submit" name="send_message" style="all: unset;">
-                                                    <a class="write-link send"></a>
-                                            </button>
-                                        </form>
-                                    </div>
+                                <!-- name -->
+                                <h4 class="name your-name">Welcome to Netpackt chatboard</h4>
+                                <!-- setting btn -->
+                                <span class="glyphicon glyphicon-cog"></span>
+                              </div>
+                            </section>
+                        
+                        
+                        
+                            <!-- RIGHT SECTION -->
+                        
+                            <section id="main-right" class="main-right">
+                              <!-- header -->
+                              <div id="header-right" class="header-right">
+                                <!-- profile pict -->
+                                <div id="header-img" class="profile header-img">
+                                  <img src="{%static 'user.png'%}" alt="">
                                 </div>
-                            </div>
+                        
+                                <!-- name -->
+                                <h4 class="name friend-name">{{selected_username}}</h4>
+                        
+                                <!-- some btn -->
+                                <div class="some-btn">
+                                  <span class="glyphicon glyphicon-facetime-video"></span>
+                                  <span class="glyphicon glyphicon-earphone"></span>
+                                  <span class="glyphicon glyphicon-option-vertical option-btn"></span>
+                                </div>
+                              </div>
+                        
+                              <!-- chat area -->
+                              <div id="chat-area" class="chat-area">
+                                <!-- chat content -->
+                        
+                                <!-- FRIENDS CHAT TEMPLATE -->
+
+
+                              </div>
+                        
+                              <!-- typing area -->
+                              <div id="typing-area" class="typing-area">
+                                
+                                <!-- input form -->
+                                
+                                <!-- attachment btn -->
+
+                                <!-- send btn -->
+                                <form method="post" action="." style="display:flex; flex-direction:row; justify-content:space-between;">
+                                  {%csrf_token%}
+                                  <input id="type-area" class="type-area" name="message" placeholder="Type something..." style="width: 500px;">
+                                  <button type="submit" style="all: unset;">
+                                  <span class="fa-regular fa-paper-plane">
+                                  </span>
+                                </button>
+                                </form>
+                              </div>
+                            </section>
+                          </div>
                         
                         <!-- partial -->
                         {% comment %} end content {% endcomment %}
@@ -202,24 +246,57 @@
         <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
         <script  src="{%static "scripts_chat.js"%}"></script>
         <script>
-            function emptyDiv() {
-                document.getElementById("chat_div").innerHTML = "";
-            }
-            
             $(document).ready(function() {
+                var currentMessages = ''; // Variable to store current messages
+                
                 setInterval(function() {
                     $.ajax({
                         type: 'GET',
-                        url: "{% url 'ajax_data_chats' selected_username=selected_username %}",  // Correctly render the template variable
+                        url: "{% url 'ajax_data_chats' selected_username=selected_username %}",
                         success: function(response) {
-                            emptyDiv();
-                            
-                            
-                            for (var key in response.chat){
+                            var newMessages = ''; // Variable to store new messages
+            
+                            // Construct string of new messages
+                            for (var key in response.chat) {
                                 var sender = response.chat[key][1];
-                                var recevier = response.chat[key][2];
                                 var message = response.chat[key][3];
-                                
+                                newMessages += sender + ': ' + message + '\n';
+                            }
+            
+                            // Compare new messages with current messages
+                            if (newMessages !== currentMessages) {
+                                $("#chat-area").empty();
+                                var $chat_box = $('#chat-area');
+            
+                                // Update chat_div with new messages
+                                for (var key in response.chat) {
+                                    var sender = response.chat[key][1];
+                                    var message = response.chat[key][3];
+                                    var logged_in_user = "{{ request.user.username }}";
+            
+                                    if (logged_in_user === sender) {
+                                        $chat_box.append(`                                
+                                        <div id="your-chat" class="your-chat">
+                                          <p class="your-chat-balloon">`+message+`</p>
+                                          <p class="chat-datetime"><span class="glyphicon glyphicon-ok"></span> Sun, Aug 30 | 15:45</p>
+                                        </div>`);
+                                    } else {
+                                        $chat_box.append(`                                
+                                        <div id="friends-chat" class="friends-chat">
+                                          <div class="profile friends-chat-photo">
+                                            <img src="{%static 'user.png'%}" alt="">
+                                          </div>
+                                          <div class="friends-chat-content">
+                                            <p class="friends-chat-name">`+sender+`</p>
+                                            <p class="friends-chat-balloon">`+message+`</p>
+                                            <h5 class="chat-datetime">Sun, Aug 30 | 15:41</h5>
+                                          </div>
+                                        </div>`);
+                                    }
+                                }
+            
+                                // Update current messages
+                                currentMessages = newMessages;
                             }
                         },
                         error: function(xhr, errmsg, err) {
@@ -228,6 +305,9 @@
                     });
                 }, 1000);
             });
+            
         </script>
+        <script src="{%static 'bootstrap3.3/js/jquery-3.3.1.min.js '%}" ></script>
+        <script src=" {%static 'bootstrap3.3/js/bootstrap.min.js' %}"></script>
     </body>
 </html>
