--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -91,8 +91,8 @@
                             </a>
                             <div class="collapse" id="collapseLayouts4" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="#">My friends</a>
-                                    <a class="nav-link" href="{%url 'sharedscans'%}">Add friends</a>
+                                    <a class="nav-link" href="{%url 'accepted_users'%}">My friends</a>
+                                    <a class="nav-link" href="{%url 'friend_requests'%}">Add friends</a>
                                 </nav>
                             </div>
 
