--- a/core/templates/core/workspace_report.html
+++ b/core/templates/core/workspace_report.html
@@ -82,6 +82,31 @@
                                 <a class="nav-link" href="{%url 'sharedscans'%}">Shared Workspaces</a>
                             </nav>
                         </div>
+                        
+                        <div class="sb-sidenav-menu-heading">Messages</div>
+                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts3" aria-expanded="false" aria-controls="collapseLayouts">
+                            <div class="sb-nav-link-icon"><i class="fa-regular fa-message"></i></div>
+                            Inbox
+                            <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                        </a>
+                        <div class="collapse" id="collapseLayouts3" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
+                            <nav class="sb-sidenav-menu-nested nav">
+                                <a class="nav-link" href="{%url 'chat' request.user.username%}">My messages</a>
+                                <a class="nav-link" href="{%url 'sharedscans'%}">Messages request</a>
+                            </nav>
+                        </div>
+
+                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts4" aria-expanded="false" aria-controls="collapseLayouts">
+                            <div class="sb-nav-link-icon"><i class="fa-solid fa-user-group"></i></div>
+                            Friends
+                            <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                        </a>
+                        <div class="collapse" id="collapseLayouts4" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
+                            <nav class="sb-sidenav-menu-nested nav">
+                                <a class="nav-link" href="{%url 'accepted_users'%}">My friends</a>
+                                <a class="nav-link" href="{%url 'friend_requests'%}">Add friends</a>
+                            </nav>
+                        </div>
                     </div>
                 </div>
                 <div class="sb-sidenav-footer">
