--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -102,7 +102,7 @@
                     <div class="sb-sidenav-footer">
                         <div class="small">Logged in as:</div>
                         {{ request.user.username }}<br>
-                        Netpackt Professional
+                        Professional Edition
                     </div>
                 </nav>
             </div>
