--- a/core/templates/core/hostdiscovery_report.html
+++ b/core/templates/core/hostdiscovery_report.html
@@ -38,7 +38,7 @@ Host discovery scan report
                 <tr>
                     <td>IP address</td>
                     <td>MAC address</td>
-                    <td>Device name</td>
+                    <td>Device vendor</td>
                     <td>Actions</td>
                 </tr>
             </thead>
