--- a/core/templates/core/networkscan.html
+++ b/core/templates/core/networkscan.html
@@ -26,18 +26,28 @@
                         Invalid port scan type
                     </div>
                 {%endif%}
+                {%if empty_name%}
+                    <div class="alert alert-danger" role="alert">
+                        Cannont leave scan name empty
+                    </div>
+                {%endif%}
+                {%if empty_ip%}
+                    <div class="alert alert-danger" role="alert">
+                        Cannont leave scan target empty
+                    </div>
+                {%endif%}
                 
                 <form method="POST" action=".">
                     {% csrf_token %}
                     <div class="row m-3">
                       <div class="col">
                         <label class="my-1 mr-2" for="scan_name">Scan Name</label>
-                        <input type="text" id="scan_name" name="scan_name" class="form-control" placeholder="EX : Company1" title="Add a name to your scan" required>
+                        <input type="text" id="scan_name" name="scan_name" class="form-control" placeholder="EX : Company1" title="Add a name to your scan" >
                       </div>
                       <div class="col">
                         <label class="my-1 mr-2" for="ip_addr">Target</label>
                         {% comment %} pattern="\b(?:\d{1,3}\.){3}\d{1,3}\b" {% endcomment %}
-                        <input type="text" name="ip_addr" id="ip_addr" class="form-control" placeholder="EX: 192.168.1.1 or 192.168.1.0/24 or scanme.nmap.org"  title="Please enter a valid IPv4 address EX: 192.168.1.1" required>
+                        <input type="text" name="ip_addr" id="ip_addr" class="form-control" placeholder="EX: 192.168.1.1 or 192.168.1.0/24 or scanme.nmap.org"  title="Please enter a valid IPv4 address EX: 192.168.1.1">
 
                       </div>
                     </div>
