--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -64,7 +64,7 @@
                     <div class="sb-sidenav-footer">
                         <div class="small">Logged in as:</div>
                         {{ request.user.username }}<br>
-                        Professional Edition
+                        <b> Professional Edition</b>
                     </div>
                 </nav>
             </div>
