--- a/core/templates/core/register.html
+++ b/core/templates/core/register.html
@@ -40,7 +40,16 @@
                     <span></span>
                     <label>Username</label>
                 </div>
-
+                <div class="txt_field">
+                    <input  id="inputEmail" type="text" name="first_name" required/>
+                    <span></span>
+                    <label>First name</label>
+                </div>
+                <div class="txt_field">
+                    <input  id="inputEmail" type="text" name="last_name" required/>
+                    <span></span>
+                    <label>Last name</label>
+                </div>
                 <div class="txt_field">
                     <input  id="inputEmail" type="email" name="email" required/>
                     <span></span>
