simple network scan

--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -82,7 +82,7 @@
                                     <div class="card-body">
                                         <i class="fa-solid fa-circle-nodes" style="font-size: 180px; margin:10px;"></i>
                                         <p class="card-text">Basic network scan</p>
-                                        <a href="{%url "network_scan"%}" class="btn btn-primary">New scan</a>
+                                        <a href="{%url 'port_scan'%}" class="btn btn-primary">New scan</a>
                                     </div>
                                 </div>
                             </div>
