css changes to login and register pages

--- a/core/static/oops.css
+++ b/core/static/oops.css
@@ -47,7 +47,7 @@
   font-family: "Poppins", sans-serif;
 }
 body {
-  background: #333333;
+  background:#202020;
   height: 100vh;
 }
 .center {
@@ -57,12 +57,12 @@ body {
   transform: translate(-50%, -50%);
   max-width: 420px;
   width: 100%;
-  background: #333333;
+  background: #444444;
   border-radius: 10px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.05);
 }
 .bg-custom-primary {
-  background-color: #202020;
+  background-color: #181818;
 }
 .center h1 {
   text-align: center;
@@ -118,14 +118,16 @@ form .txt_field {
 }
 .pass {
   margin: -5px 0 20px 5px;
-  color: #a6a6a6;
+  color: #660000;
   cursor: pointer;
 }
 .pass:hover {
   text-decoration: underline;
+  color: #660000;
 }
 .pass a{
   text-decoration: none;
+  color: #660000;
 }
 input[type="submit"] {
   width: 100%;
