--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -20,15 +20,15 @@
 {%endblock%}
 
 {% comment %} footer section {% endcomment %}
-<div id="layoutAuthentication_footer">
-    <footer class="py-4 bg-light mt-auto">
+<div id="layoutAuthentication_footer" class="">
+    <footer class="py-4 bg-black mt-auto" >
         <div class="container-fluid px-4">
             <div class="d-flex align-items-center justify-content-between small">
                 <div class="text-muted">Copyright &copy; NetPackt 2024</div>
-                <div>
-                    <a href="#">Privacy Policy</a>
+                <div >
+                    <a href="#" class="pass">Privacy Policy</a>
                     &middot;
-                    <a href="#">Terms &amp; Conditions</a>
+                    <a href="#" class="pass">Terms &amp; Conditions</a>
                 </div>
             </div>
         </div>
