--- a/core/templates/core/register.html
+++ b/core/templates/core/register.html
@@ -8,7 +8,7 @@
     window.location.href = "{% url 'home' %}"; 
 </script>
 {% else %}
-<body class="bg-primary">
+<body class="bg-custom-primary">
     <div id="layoutAuthentication">
         <div id="layoutAuthentication_content">
             <div class="center">
